some small changes to some styles

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <div class="body1">
             <div class="text">
                 <h1>This is a very random website</h1>
-                <p>This is a random text on a very random website. Don't be alarmed by the randomness of this random website.</p>
-                <p>Nothing on this website serves any purpose except to be random.</p>
+                <p>This is a random text on a very random website.</p>
+                <p>Don't be alarmed by the randomness of this random website. Nothing on this website serves any purpose except to be random.</p>
                 <p>Clowns are cool. Cats are cooler</p>
                 <button>Sign up</button>
             </div>
