added a random info section and a quote section

--- a/index.html
+++ b/index.html
@@ -27,5 +27,30 @@
                 <img src="./images/clowncat.jpeg">
             </div>
         </div>
+        <div class="body2">
+            <div class="box-header">This is some random information.</div>
+            <div class="container">
+                <div class="box-container">
+                    <div class="box"></div>
+                    <div class="text">Random text</div>
+                </div>
+                <div class="box-container">
+                    <div class="box"></div>
+                    <div class="text">More random text</div>
+                </div>
+                <div class="box-container">
+                    <div class="box"></div>
+                    <div class="text">Some more random text</div>
+                </div>
+                <div class="box-container">
+                    <div class="box"></div>
+                    <div class="text">Even more random text</div>
+                </div>
+            </div>
+        </div>
+        <div class="body3">
+            <div class="quote">So much of life, it seems to me is determined by pure randomness.</div>
+            <div class="quoter">-Sidney Poitier</div>
+        </div>
     </body>
 </html>
