added footer and some nav bar features

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
         <div class="header">
             <img src="./images/logo.svg" alt="logo">
             <ul>
-                <a href="#"><li>link1</li></a>
-                <a href="#"><li>link2</li></a>
-                <a href="#"><li>link3</li></a>
+                <a href="#home"><li>Home</li></a>
+                <a href="#info"><li>Info/li></a>
+                <a href="#quotes"><li>Quotes</li></a>
             </ul>
         </div>
-        <div class="body1">
+        <div class="body1" id="home">
             <div class="text">
                 <h1>This is a very random website</h1>
                 <p>This is a random text on a very random website.</p>
@@ -27,7 +27,7 @@
                 <img src="./images/clowncat.jpeg">
             </div>
         </div>
-        <div class="body2">
+        <div class="body2" id="info">
             <div class="box-header">This is some random information.</div>
             <div class="container">
                 <div class="box-container">
@@ -48,9 +48,17 @@
                 </div>
             </div>
         </div>
-        <div class="body3">
+        <div class="body3" id="quotes">
             <div class="quote">So much of life, it seems to me is determined by pure randomness.</div>
             <div class="quoter">-Sidney Poitier</div>
         </div>
+        <div class="body4">
+            <div>
+                <div class="bolder-text">Come join in on the randomness.</div>
+                <div class="small-text">Sign up by clicking that button right now.</div>
+            </div>
+            <button class="button2">Sign Up</button>
+        </div>
+        <div class="footer">Copyright &#169; Iyash :|</div>
     </body>
 </html>
