--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <img src="./images/logo.svg" alt="logo">
             <ul>
                 <a href="#home"><li>Home</li></a>
-                <a href="#info"><li>Info/li></a>
+                <a href="#info"><li>Info</li></a>
                 <a href="#quotes"><li>Quotes</li></a>
             </ul>
         </div>
